--- a/notebooks/pyiceberg_demo_mariselvam/pyiceberg_query_powermetrices.ipynb
+++ b/notebooks/pyiceberg_demo_mariselvam/pyiceberg_query_powermetrices.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,8 @@
      "text": [
       "                                             alldata\n",
       "0  {\"resourceMetrics\": [{\"resource\": {\"attributes...\n",
-      "1  {\"resourceMetrics\": [{\"resource\": {\"attributes...\n"
+      "1  {\"resourceMetrics\": [{\"resource\": {\"attributes...\n",
+      "2  {\"resourceMetrics\": [{\"resource\": {\"attributes...\n"
      ]
     }
    ],
