websocket alert message consumed

--- a/notebooks/pyiceberg_demo_mariselvam/pyiceberg_query_powermetrices.ipynb
+++ b/notebooks/pyiceberg_demo_mariselvam/pyiceberg_query_powermetrices.ipynb
@@ -12,7 +12,8 @@
       "                                             alldata\n",
       "0  {\"resourceMetrics\": [{\"resource\": {\"attributes...\n",
       "1  {\"resourceMetrics\": [{\"resource\": {\"attributes...\n",
-      "2  {\"resourceMetrics\": [{\"resource\": {\"attributes...\n"
+      "2  {\"resourceMetrics\": [{\"resource\": {\"attributes...\n",
+      "3  {\"resourceMetrics\": [{\"resource\": {\"attributes...\n"
      ]
     }
    ],
