--- a/notebooks/pyiceberg_demo_anandharaj/apmlogs_kafka_Injection.ipynb
+++ b/notebooks/pyiceberg_demo_anandharaj/apmlogs_kafka_Injection.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -27,17 +13,22 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "! pip install kafka-python"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "-nY0AtG6KrrF"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "! pip install kafka-python"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "xDVU1xLzK9na"
+      },
+      "outputs": [],
       "source": [
         "from pyiceberg.catalog import load_catalog\n",
         "catalog = load_catalog(\n",
@@ -51,15 +42,27 @@
         "    }\n",
         ")\n",
         "logstable=catalog.load_table(\"docs_logs.logs\") #mention tablename and namesapce"
-      ],
-      "metadata": {
-        "id": "xDVU1xLzK9na"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FpbeaKx7LFkK",
+        "outputId": "2a5903cb-cc36-4b58-fbef-a8e5db237d64"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Kafka consumer created successfully.\n"
+          ]
+        }
+      ],
       "source": [
         "from kafka import KafkaConsumer\n",
         "import json\n",
@@ -79,27 +82,15 @@
         "        print(\"Kafka consumer created successfully.\")\n",
         "except Exception as e:\n",
         "        print(f\"Error creating Kafka consumer: {e}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FpbeaKx7LFkK",
-        "outputId": "2a5903cb-cc36-4b58-fbef-a8e5db237d64"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Kafka consumer created successfully.\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-3WM19xlLKPI"
+      },
+      "outputs": [],
       "source": [
         "import pyarrow as pa\n",
         "import datetime\n",
@@ -123,6 +114,7 @@
         "          \"logsdata\":json.dumps(data),\n",
         "          \"createdTime\":datetime.datetime.now()\n",
         "      })\n",
+        "      \n",
         "      df=pa.Table.from_pylist([final])\n",
         "      logstable.append(df)\n",
         "      print(\"Data appended successfully.\")\n",
@@ -143,12 +135,21 @@
         "  consumer.close()\n",
         "  print(\"Message consumption closed.\")\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "-3WM19xlLKPI"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
