--- a/notebooks/pyiceberg_demo_mariselvam/pyiceberg_alert_message_consume.ipynb
+++ b/notebooks/pyiceberg_demo_mariselvam/pyiceberg_alert_message_consume.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,13 +106,13 @@
     "            print(f\"Received message from client: {message}\")\n",
     "    finally:\n",
     "        # Unregister client\n",
-    "        connected_clients.remove(websocket)\n",
+    "        # connected_clients.remove(websocket)\n",
     "        print(f\"Client disconnected: {websocket.remote_address}\")\n",
     "\n",
     "async def broadcast(message):\n",
     "    if connected_clients:\n",
     "        message = json.dumps(message)\n",
-    "        await asyncio.wait([client.send(message) for client in connected_clients])\n",
+    "        await asyncio.gather(*[client.send(message) for client in connected_clients])\n",
     "\n",
     "async def main():\n",
     "    # Create Kafka consumer\n",
@@ -136,6 +136,37 @@
     "        loop.run_forever()\n",
     "    except KeyboardInterrupt:\n",
     "        print(\"Server stopped by user\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "import websockets\n",
+    "\n",
+    "async def connect():\n",
+    "    async with websockets.connect(\"ws://localhost:6789\") as websocket:\n",
+    "        print(\"Connected to server\")\n",
+    "        await websocket.send(\"Hello, Server!\")\n",
+    "        response = await websocket.recv()\n",
+    "        print(f\"Received response: {response}\")\n",
+    "\n",
+    "asyncio.run(connect())"
    ]
   },
   {
