--- a/notebooks/pyiceberg_demo_mariselvam/pyiceberg_alert_message_consume.ipynb
+++ b/notebooks/pyiceberg_demo_mariselvam/pyiceberg_alert_message_consume.ipynb
@@ -54,15 +54,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Server stopped by user\n"
+     ]
+    }
+   ],
    "source": [
     "import asyncio\n",
     "import json\n",
     "import nest_asyncio\n",
     "from kafka import KafkaConsumer\n",
     "import websockets\n",
+    "from websockets.exceptions import ConnectionClosedError, ConnectionClosedOK\n",
     "\n",
     "# Apply the nest_asyncio patch to allow nested event loops\n",
     "nest_asyncio.apply()\n",
@@ -104,10 +113,10 @@
     "        async for message in websocket:\n",
     "            # Here you can handle messages received from WebSocket clients if needed\n",
     "            print(f\"Received message from client: {message}\")\n",
-    "    finally:\n",
-    "        # Unregister client\n",
-    "        # connected_clients.remove(websocket)\n",
-    "        print(f\"Client disconnected: {websocket.remote_address}\")\n",
+    "    except (ConnectionClosedError, ConnectionClosedOK) as e:\n",
+    "        print(f\"Client {websocket.remote_address} disconnected: {e}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error in websocket handler for client {websocket.remote_address}: {e}\")\n",
     "\n",
     "async def broadcast(message):\n",
     "    if connected_clients:\n",
@@ -139,22 +148,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New client connected: ('::1', 59630, 0, 0), Path: /\n",
+      "Received message from client: Hello, Server!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to server\n",
+      "Received response: {\"message\": \"Connected to alert notification service\"}\n"
+     ]
+    }
+   ],
    "source": [
     "import asyncio\n",
     "import websockets\n",
