Updated trace data ingestion

--- a/notebooks/pyiceberg_demo_sharanya/apmtraceSchemaCreate.ipynb
+++ b/notebooks/pyiceberg_demo_sharanya/apmtraceSchemaCreate.ipynb
@@ -182,11 +182,6 @@
         "    NestedField(field_id=9, name=\"requestRoute\", field_type=StringType(), required=False),\n",
         "    NestedField(field_id=10, name=\"requestMethod\", field_type=StringType(), required=False),\n",
         "    NestedField(field_id=11, name=\"responseStatusCode\", field_type=StringType(), required=False), \n",
-        "    \n",
-        "\n",
-        "    \n",
-        "\n",
-        "\n",
         ")\n",
         "\n",
         "# partition_spec = PartitionSpec(\n",
@@ -239,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -251,16 +246,16 @@
         {
           "data": {
             "text/plain": [
-              "[('sha_trace', 'traces')]"
+              "[('ingesttrace', 'traces')]"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "catalog.list_tables(\"sha_trace\")  #mention namespace"
+        "catalog.list_tables(\"ingesttrace\")  #mention namespace"
       ]
     },
     {
