--- a/notebooks/pyiceberg_demo_sharanya/apmtrace_kafka_Ingestion.ipynb
+++ b/notebooks/pyiceberg_demo_sharanya/apmtrace_kafka_Ingestion.ipynb
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 49,
       "metadata": {
         "id": "xDVU1xLzK9na"
       },
@@ -110,7 +110,7 @@
         "            \"s3.secret-access-key\": \"minio1234\",\n",
         "    }\n",
         ")\n",
-        "logstable=catalog.load_table(\"ingesttrace.traces\") #mention tablename and namesapce"
+        "tracetable=catalog.load_table(\"ingesttrace.traces\") #mention tablename and namesapce"
       ]
     },
     {
@@ -225,7 +225,7 @@
         "                \"requestMethod\": method, \n",
         "                \"responseStatusCode\": status_code})\n",
         "  df=pa.Table.from_pylist([final])\n",
-        "  logstable.append(df)\n",
+        "  tracetable.append(df)\n",
         "  print(\"Data appended successfully.\")\n",
         "  final={}\n",
         "messages=[]\n",
